
[TestMoveCmd/fails_when_missing_or_empty_arguments - 1]
aerospace-scratchpad move 

Output

Error
argument at position 0 is empty or whitespace
---

[TestMoveCmd/fails_when_getting_all_windows_return_an_erro - 1]
aerospace-scratchpad move test

Output

Error
unable to get windows
---

[TestMoveCmd/moves_a_window_to_scratchpad_by_pattern - 1]
[]aerospacecli.Window{
    {WindowID:1, WindowTitle:"", AppName:"MyApp"},
    {WindowID:2, WindowTitle:"", AppName:"OtherApp"},
}
aerospace-scratchpad move MyApp

Output
Moving window 1 | MyApp |  to scratchpad

Error
 <nil>
---

[TestMoveCmd/fails_when_moving_a_window_to_scratchpad - 1]
[]aerospacecli.Window{
    {WindowID:1, WindowTitle:"", AppName:"MyApp"},
    {WindowID:2, WindowTitle:"", AppName:"OtherApp"},
}
aerospace-scratchpad move MyApp

Output

Error
Error: unable to move window '1 | MyApp | ' to scratchpad

---
